crates/ruma-common/tests/it/api/ui/removed-without-deprecated.stderr
error: no rules expected `removed`
 --> tests/it/api/ui/removed-without-deprecated.rs:9:16
  |
9 |         1.1 => removed,
  |                ^^^^^^^ no rules expected this token in macro call
  |
  = note: while trying to match sequence start
